Update cover button hint text for clarity and adjust hero section height properties

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button class="cover-button" type="button" data-cover>
       <img src="envelop-desktop.png" alt="Envelope de convite de casamento" class="cover-image cover-image--desktop" />
       <img src="envelop-mobile.png" alt="Envelope de convite de casamento" class="cover-image cover-image--mobile" />
-      <span class="cover-hint">Clique para entrar</span>
+      <span class="cover-hint">Abrir Convite ❤️</span>
     </button>
   </main>
   <div class="fade-layer" data-fade-layer aria-hidden="true"></div>
