Revise wedding story timeline and program details for clarity; update audio control synchronization and styling

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="main-page">
-  <audio controls autoplay loop hidden data-audio-player>
+  <audio controls autoplay="" loop hidden data-audio-player>
     <source src="wedding-music.mp3" type="audio/mpeg" />
   </audio>
 
@@ -64,44 +64,33 @@
       </div>
       <div class="story__timeline">
         <article class="story__item">
-          <span class="story__year">2013</span>
-          <p data-i18n="story2013">
-            Inês e Diego conheceram-se nos colégios Fomento (Mira-Rio e Planalto).
-          </p>
+          <span class="story__year">03/10/2011</span>
+          <p data-i18n="story2013">Inês e Diego conheceram-se nos colégios Fomento (Mira-Rio e Planalto).</p>
         </article>
         <article class="story__item">
-          <span class="story__year">2014</span>
-          <p data-i18n="story2014">
-            Começamos a namorar mas precisamos de crescer e amadurecer.
-          </p>
+          <span class="story__year">26/10/2011</span>
+          <p data-i18n="story2014">Começaram a namorar cedo demais para saber o que era amar; o tempo levou-os por
+            caminhos diferentes para amadurecer.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">2016–2021</span>
-          <p data-i18n="story2016">
-            Mantivemos a nossa amizade e até umas férias de verão com a nossa família tivemos.
-          </p>
+          <span class="story__year">2011–2021</span>
+          <p data-i18n="story2016">Durante uma década seguiram caminhos distintos, mas a amizade manteve-se firme.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">2021</span>
-          <p data-i18n="story2021">
-            O destino voltou a cruzar os nossos caminhos e voltamos a namorar.
-          </p>
+          <span class="story__year">21/08/2021</span>
+          <p data-i18n="story2021">Cresceram, e o destino voltou a cruzar os seus caminhos.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">2024</span>
-          <p data-i18n="story2024">
-            Compramos a nossa primeira casa e fomos viver juntos.
-          </p>
+          <span class="story__year">09/10/2024</span>
+          <p data-i18n="story2024">Compraram a primeira casa e abriram a porta para a vida que queriam partilhar.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">2025</span>
-          <p data-i18n="story2025">Diego pediu a Inês em casamento.</p>
+          <span class="story__year">21/03/2025</span>
+          <p data-i18n="story2025">Diego pediu Inês em noivado.</p>
         </article>
         <article class="story__item story__item--highlight">
-          <span class="story__year">01·08·2026</span>
-          <p data-i18n="story2026">
-            O dia em que dizemos “Sim” para sempre!
-          </p>
+          <span class="story__year">01/08/2026</span>
+          <p data-i18n="story2026">O dia em que prometem ser um para sempre!</p>
         </article>
       </div>
     </section>
@@ -116,10 +105,10 @@
           <div class="timeline__item">
             <div class="timeline__marker" aria-hidden="true">⛪</div>
             <div class="timeline__content">
-              <span class="timeline__time">15:00</span>
-              <h3 data-i18n="programCeremony">Cerimónia</h3>
+              <span class="timeline__time">14:30</span>
+              <h3 data-i18n="programCeremony">Cerimónia / Igreja Santo Quintino</h3>
               <p data-i18n="programCeremonyDesc">
-                Receção dos convidados e início da cerimónia.
+                Receção dos convidados e início da cerimónia
               </p>
             </div>
           </div>
@@ -127,27 +116,37 @@
             <div class="timeline__marker" aria-hidden="true">🥂</div>
             <div class="timeline__content">
               <span class="timeline__time">16:30</span>
-              <h3 data-i18n="programToast">Copo de água</h3>
-              <p data-i18n="programToastDesc">Brinde e convívio no jardim.</p>
+              <h3 data-i18n="programToast">Welcome Cocktail</h3>
+              <p data-i18n="programToastDesc">Chegada à Quinta de São Gonçalo</p>
             </div>
           </div>
           <div class="timeline__item">
             <div class="timeline__marker" aria-hidden="true">🍽️</div>
             <div class="timeline__content">
-              <span class="timeline__time">19:00</span>
+              <span class="timeline__time">20:00</span>
               <h3 data-i18n="programDinner">Jantar</h3>
               <p data-i18n="programDinnerDesc">
-                Menu especial servido no salão principal.
+                Jantar e Celebração
               </p>
             </div>
           </div>
           <div class="timeline__item">
             <div class="timeline__marker" aria-hidden="true">🎉</div>
             <div class="timeline__content">
-              <span class="timeline__time">21:30</span>
+              <span class="timeline__time">23:00</span>
               <h3 data-i18n="programParty">Festa</h3>
               <p data-i18n="programPartyDesc">
-                Música, dança e surpresas até tarde.
+                Vamos dançar até amanhecer!
+              </p>
+            </div>
+          </div>
+          <div class="timeline__item">
+            <div class="timeline__marker" aria-hidden="true">🫂</div>
+            <div class="timeline__content">
+              <span class="timeline__time">04:00</span>
+              <h3 data-i18n="programPartyEnd">Fim da Festa</h3>
+              <p data-i18n="programPartyEndDesc">
+                Despedida e boas memórias
               </p>
             </div>
           </div>
@@ -188,26 +187,24 @@
     <section class="section transport reveal">
       <div class="section__title">
         <h2 data-i18n="transportTitle">Transporte</h2>
-        <p data-i18n="transportSubtitle">Opções fáceis para chegar com conforto.</p>
+        <p data-i18n="transportSubtitle">A Quinta de São Gonçalo oferece estacionamento a todos os que pretenderem levar
+          carro.</p>
       </div>
       <div class="cards">
         <article class="card">
           <h3 data-i18n="transportShuttle">Transporte organizado</h3>
           <p data-i18n="transportShuttleDesc">
-            Drivers disponiveis a partir do centro de Lisboa.
-          </p>
-          <p class="card__meta" data-i18n="transportShuttleMeta">
-            Saída às 13:30 · Regresso às 02:00
+            Será estudado a opção de um autocarro comum. Pedimos que, caso estejam interessados, informem os noivos com
+            brevidade.
           </p>
         </article>
         <article class="card">
           <h3 data-i18n="transportOwn">Transporte próprio</h3>
           <p data-i18n="transportOwnDesc">
-            Estacionamento gratuito disponível no local.
+            Para que possam usufruir da cerimónia e festas sem preocupações, deixamos abaixo um contacto de um
+            coordenador de uma equipa de drivers.
           </p>
-          <p class="card__meta" data-i18n="transportOwnMeta">
-            Coordenadas GPS disponíveis no convite.
-          </p>
+          Manuel Maio:<a href="tel:+351911110911">📞 +351 911 110 911</a>
         </article>
       </div>
     </section>
@@ -215,7 +212,8 @@
     <section class="section gallery reveal">
       <div class="section__title">
         <h2 data-i18n="galleryTitle">Galeria</h2>
-        <p data-i18n="gallerySubtitle">Alguns momentos que inspiram o nosso dia.</p>
+        <p data-i18n="gallerySubtitle">Alguns momentos que fazem parte da nossa história, desde mais pequenos até hoje!
+        </p>
       </div>
 
       <div class="carousel" data-carousel>
@@ -298,7 +296,8 @@
       <div class="section__title">
         <h2 data-i18n="rsvpTitle">RSVP</h2>
         <p data-i18n="rsvpSubtitle">
-          Confirma a tua presença para prepararmos tudo com carinho.
+          Confirma a tua presença até dia 17 de abril 2026 para que possamos preparar tudo ao detalhe e com todo o nosso
+          carinho.
         </p>
       </div>
       <form class="form" id="rsvp-form" action="https://formspree.io/f/xpqdzzad" method="POST" data-rsvp-form>
@@ -333,7 +332,9 @@
     <section class="section gifts reveal">
       <div class="section__title">
         <h2 data-i18n="giftsTitle">Presentes</h2>
-        <p data-i18n="giftsSubtitle">A vossa presença é o maior presente.</p>
+        <p data-i18n="giftsSubtitle">A vossa presença é o nosso maior presente, e tê-los connosco torna este dia já
+          inesquecível. Para quem quiser juntar-se a nós de forma ainda mais especial, deixamos aqui informações para
+          contribuir para a nossa casa ou para a lua de mel que sonhamos viver juntos, entre Nova Iorque e Hawaii.</p>
       </div>
       <div class="gifts__content">
         <p data-i18n="giftsNote">
@@ -341,7 +342,7 @@
         </p>
         <div class="iban">
           <span class="iban__label">IBAN</span>
-          <span class="iban__value" data-iban>PT50 1234 5678 9012 3456 7890 1</span>
+          <span class="iban__value" data-iban>PT50 0010 0000 6351 7310 0014 5</span>
           <button class="button button--ghost" type="button" data-copy-iban>
             <span data-i18n="copyIban">Copiar</span>
           </button>
@@ -361,13 +362,16 @@
         <details>
           <summary data-i18n="faqDressCode">Dress code</summary>
           <p data-i18n="faqDressCodeDesc">
-            Elegante e confortável. Tons claros são bem-vindos.
+            Estamos certos que todos os convidados têm bom gosto pelo que apenas pedimos que tragam o vosso melhor
+            outfit! De acordo com o protocolo, solicitamos apenas que evitem a cor branca e tons semelhantes.
           </p>
         </details>
         <details>
-          <summary data-i18n="faqKids">Crianças</summary>
+          <summary data-i18n="faqKids">Convidados</summary>
           <p data-i18n="faqKidsDesc">
-            Adoramos os pequenos, por favor indica no RSVP.
+            O convite efetuado já indica os nomes das pessoas que foram convidadas. Pedimos pfv a vossa maior
+            compreensão uma vez que, por mais que adorássemos alargar o número de pessoas, o espaço é limitado e tivemos
+            que tomar a decisão de quem esteve e estará sempre connosco desde sempre e para sempre!.
           </p>
         </details>
         <details>
@@ -388,7 +392,11 @@
     <section class="section video reveal">
       <div class="section__title">
         <h2 data-i18n="videoTitle">Nosso vídeo</h2>
-        <p data-i18n="videoSubtitle">Um momento especial para recordar.</p>
+        <p data-i18n="videoSubtitle">Como nem todos tiveram a oportunidade de nos acompanhar de perto ao longo deste
+          ano, gostaríamos de vos presentear com um pequeno grande momento que resume o nosso amor e que ditou o início
+          desta consagração matrimonial: o nosso pedido de casamento! Cliquem no play, aumentem o som (o vídeo está em
+          bruto pelo que é possível que se ouça um pouco do maravilhoso discurso que o noivo fez à noiva) e esperemos
+          que se emocionem e gostem tanto como nós ❤️ Até dia 01 de agosto de 2026.</p>
       </div>
       <div class="video__frame">
         <video class="video__player" src="Ines&DiegoPedido.mp4" controls autoplay muted loop playsinline></video>
