--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
             <div class="timeline__marker" aria-hidden="true">⛪</div>
             <div class="timeline__content">
               <span class="timeline__time">14:30</span>
-              <h3 data-i18n="programCeremony">Cerimónia / Igreja Santo Quintino</h3>
+              <h3 data-i18n="programCeremony">Igreja Santo Quintino</h3>
               <p data-i18n="programCeremonyDesc">
                 Receção dos convidados e início da cerimónia
               </p>
