--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inês & Diego — Convite de Casamento</title>
   <meta name="robots" content="noindex, nofollow">
-  <link rel="stylesheet" href="assets/styles.css" />
-  <script defer src="assets/main.js"></script>
+  <link rel="stylesheet" href="invite/assets/styles.css" />
+  <script defer src="invite/assets/main.js"></script>
 </head>
 
 <body class="cover-page">
   <main class="cover" aria-label="Convite de Casamento">
     <button class="cover-button" type="button" data-cover>
-      <img src="envelop-desktop.png" alt="Envelope de convite de casamento" class="cover-image cover-image--desktop" />
-      <img src="envelop-mobile.png" alt="Envelope de convite de casamento" class="cover-image cover-image--mobile" />
+      <img src="invite/static_files/envelop-desktop.png" alt="Envelope de convite de casamento"
+        class="cover-image cover-image--desktop" />
+      <img src="invite/static_files/envelop-mobile.png" alt="Envelope de convite de casamento"
+        class="cover-image cover-image--mobile" />
       <span class="cover-hint">Abrir Convite ❤️</span>
     </button>
   </main>
