--- a/invite/index.html
+++ b/invite/index.html
@@ -11,8 +11,8 @@
 </head>
 
 <body class="main-page">
-  <audio controls autoplay="" loop hidden data-audio-player>
-    <source src="wedding-music.mp3" type="audio/mpeg" />
+  <audio loop hidden data-audio-player>
+    <source src="static_files/wedding-music.mp3" type="audio/mpeg" />
   </audio>
 
   <header class="hero hero--cover">
@@ -152,7 +152,7 @@
           </div>
         </div>
         <aside class="program__media">
-          <img src="ProgramaDasFestas.jpeg" alt="Programa das festas" />
+          <img src="static_files/ProgramaDasFestas.jpeg" alt="Programa das festas" />
         </aside>
       </div>
     </section>
@@ -164,7 +164,7 @@
       </div>
       <div class="location__cards">
         <article class="location__card">
-          <img src="IgrejaSantoQuintino.jpeg" alt="Igreja de Santo Quintino" />
+          <img src="static_files/IgrejaSantoQuintino.jpeg" alt="Igreja de Santo Quintino" />
           <div class="location__content">
             <h3 data-i18n="locationChurchName">Igreja de Santo Quintino</h3>
             <p data-i18n="locationChurchRole">Cerimónia religiosa</p>
@@ -173,7 +173,7 @@
           </div>
         </article>
         <article class="location__card">
-          <img src="QuintaSGoncalo.jpeg" alt="Quinta de São Gonçalo" />
+          <img src="static_files/QuintaSGoncalo.jpeg" alt="Quinta de São Gonçalo" />
           <div class="location__content">
             <h3 data-i18n="locationQuintaName">Quinta de São Gonçalo</h3>
             <p data-i18n="locationQuintaRole">Copo de água e festa</p>
@@ -222,49 +222,57 @@
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego1.jpeg" alt="Ines e Diego 1" data-full="Ines&Diego1.jpeg" />
+                <img src="static_files/Ines&amp;Diego1.jpeg" alt="Ines e Diego 1"
+                  data-full="static_files/Ines&amp;Diego1.jpeg" />
               </div>
             </figure>
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego2.jpeg" alt="Ines e Diego 2" data-full="Ines&Diego2.jpeg" />
+                <img src="static_files/Ines&amp;Diego2.jpeg" alt="Ines e Diego 2"
+                  data-full="static_files/Ines&amp;Diego2.jpeg" />
               </div>
             </figure>
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego3.jpeg" alt="Ines e Diego 3" data-full="Ines&Diego3.jpeg" />
+                <img src="static_files/Ines&amp;Diego3.jpeg" alt="Ines e Diego 3"
+                  data-full="static_files/Ines&amp;Diego3.jpeg" />
               </div>
             </figure>
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego4.jpeg" alt="Ines e Diego 4" data-full="Ines&Diego4.jpeg" />
+                <img src="static_files/Ines&amp;Diego4.jpeg" alt="Ines e Diego 4"
+                  data-full="static_files/Ines&amp;Diego4.jpeg" />
               </div>
             </figure>
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego5.jpeg" alt="Ines e Diego 5" data-full="Ines&Diego5.jpeg" />
+                <img src="static_files/Ines&amp;Diego5.jpeg" alt="Ines e Diego 5"
+                  data-full="static_files/Ines&amp;Diego5.jpeg" />
               </div>
             </figure>
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego6.jpeg" alt="Ines e Diego 6" data-full="Ines&Diego6.jpeg" />
+                <img src="static_files/Ines&amp;Diego6.jpeg" alt="Ines e Diego 6"
+                  data-full="static_files/Ines&amp;Diego6.jpeg" />
               </div>
             </figure>
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego7.jpeg" alt="Ines e Diego 7" data-full="Ines&Diego7.jpeg" />
+                <img src="static_files/Ines&amp;Diego7.jpeg" alt="Ines e Diego 7"
+                  data-full="static_files/Ines&amp;Diego7.jpeg" />
               </div>
             </figure>
 
             <figure class="carousel__slide">
               <div class="carousel__frame">
-                <img src="Ines&Diego8.jpeg" alt="Ines e Diego 8" data-full="Ines&Diego8.jpeg" />
+                <img src="static_files/Ines&amp;Diego8.jpeg" alt="Ines e Diego 8"
+                  data-full="static_files/Ines&amp;Diego8.jpeg" />
               </div>
             </figure>
 
@@ -399,7 +407,8 @@
           que se emocionem e gostem tanto como nós ❤️ Até dia 01 de agosto de 2026.</p>
       </div>
       <div class="video__frame">
-        <video class="video__player" src="Ines&DiegoPedido.mp4" controls autoplay muted loop playsinline></video>
+        <video class="video__player" src="static_files/Ines&amp;DiegoPedido.mp4" controls autoplay muted loop
+          playsinline></video>
       </div>
     </section>
   </main>
