Refactor translations and update RSVP form fields for clarity and consistency

--- a/invite/index.html
+++ b/invite/index.html
@@ -69,7 +69,7 @@
         </article>
         <article class="story__item">
           <span class="story__year">26/10/2011</span>
-          <p data-i18n="story2014">Começaram a namorar cedo demais para saber o que era amar; o tempo levou-os por
+          <p data-i18n="story2014">Começaram a namorar cedo demais para saber o que era amar, e o tempo indicou-lhes
             caminhos diferentes para amadurecer.</p>
         </article>
         <article class="story__item">
@@ -151,9 +151,6 @@
             </div>
           </div>
         </div>
-        <aside class="program__media">
-          <img src="static_files/ProgramaDasFestas.jpeg" alt="Programa das festas" />
-        </aside>
       </div>
     </section>
 
@@ -182,6 +179,9 @@
           </div>
         </article>
       </div>
+      <aside class="program__media">
+        <img src="static_files/ProgramaDasFestas.jpeg" alt="Programa das festas" />
+      </aside>
     </section>
 
     <section class="section transport reveal">
@@ -314,8 +314,8 @@
           <input type="text" name="name" required autocomplete="name" />
         </label>
         <label class="field">
-          <span data-i18n="rsvpGuests">Número de convidados</span>
-          <input type="number" name="guests" min="1" max="8" required />
+          <span data-i18n="rsvpGuests">E-mail</span>
+          <input type="email" name="guests" required autocomplete="email" />
         </label>
         <label class="field">
           <span data-i18n="rsvpAttendance">Confirmação</span>
