Changed confirmation deadline

--- a/invite/index.html
+++ b/invite/index.html
@@ -304,8 +304,8 @@
       <div class="section__title">
         <h2 data-i18n="rsvpTitle">RSVP</h2>
         <p data-i18n="rsvpSubtitle">
-          Confirma a tua presença até dia 17 de abril 2026 para que possamos preparar tudo ao detalhe e com todo o nosso
-          carinho.
+          Confirma a tua presença até dia 01 de maio de 2026 para que possamos preparar tudo ao detalhe e com todo o
+          nosso carinho.
         </p>
       </div>
       <form class="form" id="rsvp-form" action="https://formspree.io/f/xpqdzzad" method="POST" data-rsvp-form>
