Enhance RSVP and story year formatting for improved clarity

--- a/invite/index.html
+++ b/invite/index.html
@@ -64,32 +64,32 @@
       </div>
       <div class="story__timeline">
         <article class="story__item">
-          <span class="story__year">03/10/2011</span>
+          <span class="story__year"><strong>03/10/2011</strong></span>
           <p data-i18n="story2013">Inês e Diego conheceram-se nos colégios Fomento (Mira-Rio e Planalto).</p>
         </article>
         <article class="story__item">
-          <span class="story__year">26/10/2011</span>
+          <span class="story__year"><strong>26/10/2011</strong></span>
           <p data-i18n="story2014">Começaram a namorar cedo demais para saber o que era amar, e o tempo indicou-lhes
             caminhos diferentes para amadurecer.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">2011–2021</span>
+          <span class="story__year"><strong>2011–2021</strong></span>
           <p data-i18n="story2016">Durante uma década seguiram caminhos distintos, mas a amizade manteve-se firme.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">21/08/2021</span>
+          <span class="story__year"><strong>21/08/2021</strong></span>
           <p data-i18n="story2021">Cresceram, e o destino voltou a cruzar os seus caminhos.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">09/10/2024</span>
+          <span class="story__year"><strong>09/10/2024</strong></span>
           <p data-i18n="story2024">Compraram a primeira casa e abriram a porta para a vida que queriam partilhar.</p>
         </article>
         <article class="story__item">
-          <span class="story__year">21/03/2025</span>
+          <span class="story__year"><strong>21/03/2025</strong></span>
           <p data-i18n="story2025">Diego pediu Inês em noivado.</p>
         </article>
         <article class="story__item story__item--highlight">
-          <span class="story__year">01/08/2026</span>
+          <span class="story__year"><strong>01/08/2026</strong></span>
           <p data-i18n="story2026">O dia em que prometem ser um para sempre!</p>
         </article>
       </div>
